# DAT255-V26-

./: Demo.ipynb  README.md  Train.ipynb  Train_MobileNetV2.ipynb  pyproject.toml
models/: deeperv3_ps255.keras  multiscale_ps64.keras
src/: models.py  utils.py
