[project]
name = "dat255v26"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.14.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pydicom>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
